Source/WebCore/animation/WebAnimationTypes.h
@@ -55,6 +55,12 @@ enum class AnimationImpact {
     ForcesStackingContext   = 1 << 1
 };
 
+enum class AcceleratedActionApplicationResult {
+    TransformRelatedAnimationCannotBeAccelerated  = 1 << 0
+};
+
+enum class UseAcceleratedAction : uint8_t { Yes, No };
+
 using MarkableDouble = Markable<double, WebAnimationsMarkableDoubleTraits>;
 
 using AnimationCollection = ListHashSet<RefPtr<WebAnimation>>;
